# s3-cas

./: .gitignore  CLAUDE.md  Cargo.toml  MULTIPART_TRACE.md  README.md  httpUIsession.txt  users.toml
cas-storage/: Cargo.toml
cas-storage/src/: cas.rs  lib.rs  metrics.rs
cas-storage/src/cas/: fs.rs  multipart.rs  range_request.rs
cas-storage/src/metastore/: meta_store.rs  mod.rs  object.rs  traits.rs
cas-storage/src/metastore/stores/: fjall.rs  fjall_notx.rs
docs/: IMPLEMENTATION_STATUS.md  cas-storage-library-api.md  multi-user-prd.md
docs/adr/: 001-multi-user-authentication.md  002-rustls-migration.md  003-cas-storage-library-extraction.md
s3-cas/: Cargo.toml
s3-cas/benches/: casfs_benchmark.rs
s3-cas/src/: check.rs  inspect.rs  internal_macros.rs  lib.rs  main.rs  metrics.rs  retrieve.rs  s3fs.rs
s3-cas/src/auth/: router.rs  user_store.rs
s3-cas/src/http_ui/: admin.rs  handlers.rs  login.rs  middleware.rs  mod.rs  profile.rs  responses.rs  templates.rs
src/: check.rs  inspect.rs  lib.rs  main.rs  metrics.rs  retrieve.rs  s3_wrapper.rs  s3fs.rs
src/auth/: mod.rs  router.rs  session.rs  user_config.rs  user_store.rs
src/cas/: block_stream.rs  fjall_store.rs  fs.rs  mock_casfs.rs  shared_block_store.rs
src/http_ui/: admin.rs  auth.rs  handlers.rs  login.rs  middleware.rs  mod.rs  profile.rs  responses.rs  templates.rs
src/metastore/: errors.rs  meta_store.rs  traits.rs
src/metastore/stores/: fjall.rs  fjall_notx.rs  test_utils.rs
tests/: it_s3.rs
