[workspace]
members = ["cas-storage", "s3-cas"]
resolver = "2"

[workspace.package]
edition = "2018"
authors = ["Lee Smet <lee.smet@hotmail.com>"]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-fs = "2.1"
futures = "0.3"

# Storage backend
fjall = "2.11.2"

# Hashing and crypto
md-5 = { version = "0.10.6" }
faster-hex = "0.10.0"

# Data structures
bytes = "1.7.1"
uuid = { version = "1.12", features = ["v4"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "2.0.1"
toml = "0.8"

# Error handling
anyhow = { version = "1.0.95" }

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Time
chrono = "0.4"

# Utilities
lazy_static = "1.5.0"

[profile.release]
lto = true
codegen-units = 1
