[package]
name = "cas-storage"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Content-addressable storage library with block-level deduplication"

[dependencies]
# Core async runtime
tokio.workspace = true
async-trait.workspace = true
async-fs.workspace = true
futures.workspace = true

# Storage backend
fjall.workspace = true

# Hashing
md-5.workspace = true
faster-hex.workspace = true

# Data structures
bytes.workspace = true
uuid.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# S3 types (for ByteStream)
rusoto_core = "0.48.0"

# Encoding
hex = "0.4.3"

[dev-dependencies]
tempfile = "3"
once_cell = "1.20.2"
