[package]
name = "s3-cas"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
readme = "README.md"
description = "An experimental S3 server using a cas storage layer"

[features]
default = []
vendored = ["openssl"]
asm = ["md-5/asm"]

[dependencies]
# CAS storage library
cas-storage = { path = "../cas-storage" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
toml.workspace = true
bincode.workspace = true
md-5.workspace = true
faster-hex.workspace = true

# S3-specific dependencies
s3s = { git = "https://github.com/Nugine/s3s", tag = "v0.11.1" }
rusoto_core = "0.48.0"

# HTTP/Web server
hyper = { version = "1.6.0" }
hyper-util = { version = "0.1.9", features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
http-body-util = "0.1.3"

# Web UI
maud = "0.27.0"
urlencoding = "2.1"

# CLI
clap = { version = "4.5.32", features = ["derive"] }
dotenv = { version = "0.15" }

# Authentication
bcrypt = "0.17.1"
cookie = "0.18.1"
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.8"
subtle = "2.6"

# Metrics
prometheus = { version = "0.13.4", features = ["process"] }

# Debugging
console-subscriber = "0.5.0"

# Optional TLS
openssl = { version = "0.10.68", features = ["vendored"], optional = true }

[dev-dependencies]
s3s-aws = { git = "https://github.com/Nugine/s3s", package = "s3s-aws", tag = "v0.11.1" }
aws-config = { version = "1.5.8", default-features = false }
aws-credential-types = { version = "1.2.1", features = ["test-util"] }
aws-sdk-s3 = { version = "1.56.0", features = ["behavior-version-latest"] }
once_cell = "1.20.2"
tempfile = "3"
log = "0.4.14"
env_logger = "0.11.6"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "fjall_benchmark"
harness = false
path = "benches/fjall_benchmark.rs"

[[bench]]
name = "casfs_benchmark"
harness = false
path = "benches/casfs_benchmark.rs"
